<resources>
    <string name="app_name">Serial Decoder</string>
    <string name="onboarding_select_brand_image">Onboarding Image of Selecting a Brand</string>
    <string name="select_a_brand">Select a Brand</string>
    <string name="onboarding_message_one">Choose the brand you use from our list of existing brands</string>
    <string name="onboarding_insert_serial_number_image">Image of Insert Serial Number</string>
    <string name="insert_serial_number">Insert Serial Number</string>
    <string name="onboarding_message_two">Insert Serial Number found on your device, or you can scan QR code using our app</string>
    <string name="onboarding_view_details_about_device_image">Image of viewing the details of a device</string>
    <string name="view_and_read">View and Read</string>
    <string name="onboarding_message_three">After adding the serial number, our app will provide details about your device such as manufactored origin, and date of manufactor</string>
    <string name="get_started">Get Started</string>
    <string name="first_page_indicator">First Page Indicator</string>
    <string name="second_page_indicator">Second Page Indicator</string>
    <string name="third_page_indicator">Third Page Indicator</string>
    <string name="scanner_icon">Scanner Icon</string>
    <string name="change_manufactor">Change Manufactor</string>
    <string name="faq_button">Frequently Asked Questions Button</string>
    <string name="manufactored_type_image">Image of Manufactored Type</string>
    <string name="manufactored_date_image">Image of Manufactored Date</string>
    <string name="manufactored_location_image">Image of Manufactored Location</string>
    <string name="bottom_sheet_puller">Pull upward to drag Bottom Sheet</string>
    <string name="camera">Camera</string>
    <string name="x_permission_is_denied">%s Permission is denied permanently, please visit your app settings, and change it</string>
    <string name="x_permission_is_required_for_scanning_qr">%s Permission is required for scanning QR codes</string>
    <string name="request_x_permission">Request %s Permission</string>
    <string name="scan_serial_with_qr">Scan Serial With QR</string>
    <string name="contact_developer">Contact The Developer</string>
    <string name="rate_the_app">Rate The App!</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="faq_1">How does the serial get decoded?</string>
    <string name="ans_1">For every brand, there\'s a serial, and that serial represent certain words that are encoded into that serial, and each character, or number represent a meaning, we take all that and decode every character, or sequence of characters to provide its meaningful pre-encoded message, such as its manufactor type, or date of manufactor, and the type of serial inserted, all that within a scan of the serial QR code</string>
    <string name="faq_2">What Brands are available on the app?</string>
    <string name="ans_2">We\'ve got Samsung TVs and LG TVs so far, and we are planning to add more brands, and manufactures soon</string>
    <string name="faq_3">Do you have any other web applications?</string>
    <string name="ans_3">Yes, you can visit Google\'s Play Store to check some of our apps.</string>
    <string name="serial_decoder">Serial Decoder</string>
    <string name="back_button">Back Button</string>
    <string name="korea">Korea</string>
    <string name="tv">TV</string>
    <string name="romania">Romania</string>
    <string name="india">India</string>
    <string name="hungary">Hungary</string>
    <string name="mexico">Mexico</string>
    <string name="china">China</string>
    <string name="slovenia">Slovenia</string>
    <string name="malaysia">Malaysia</string>
    <string name="russia">Russia</string>
    <string name="couldnot_identify_type">Not Found</string>
    <string name="couldnot_identify_country">Not Found</string>
    <string name="couldnot_identify_date">Not Found</string>
    <string name="made_in">Made in %s</string>
    <string name="dismiss">Dismiss</string>
    <string name="choose_a_brand">Choose a Brand</string>
    <string name="barcode_error">Barcode Error, try again, exception: %s</string>
    <string name="barcode_not_found">Barcode not found</string>
    <string name="parsing_number_error_due_to">Parsing Number error due to: %s</string>
    <string name="couldnot_decode_serial_error_due_to">Couldn\'t decode the serial due to: %s</string>
    <string name="not_tv">Not a TV</string>
    <string name="couldnot_parse_numeric_value">Could not parse that numeric value, with error %s</string>
    <string name="incorrect_serial_check_again">Incorrect Serial, Check the brand or serial, with error %s</string>
</resources>